--- a/springboot-dubbo-server/src/main/resources/application.properties
+++ b/springboot-dubbo-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port=8082
 ## Dubbo 服务提供者配置
 spring.dubbo.application.name=provider
 spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
 spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
+spring.dubbo.protocol.port=20881
+##申明需要暴露的服务接口
 spring.dubbo.scan=org.spring.springboot.dubbo
