遇到了一个很奇葩的bug，当业务处方法名为saveXxx(),项目中是saveCity(),调用保存接口，接口中还没有到调用业务处的這个saveCity(),就已经开始插入数据了，接来再走saveCity()方法继续插入，所以出现插入多条相同数据，经过几番测试，改掉业务层的saveCity方法名改为addCity,就正常执行。

--- a/springboot-freemarker/src/main/resources/application.properties
+++ b/springboot-freemarker/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://139.224.14.39:3306/springbootdb?useUnicode=true&characterEncoding=utf8
+server.port=8083
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=Hello123!@
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Mybatis 配置
 mybatis.typeAliasesPackage=org.spring.springboot.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
+#mybatis.type-aliases-package=org.spring.springboot.dao
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 ## Freemarker 配置
 ## 文件配置路径
